# bl_earth

./: .gitignore  README.md  __init__.py  bl_earth.py  blender_manifest.toml  build_extension.py  data.py  earth.py  install_dependencies.py  operators.py  panels.py  pyproject.toml  render.py  requirements.txt
addons/bl_earth/: __init__.py  data.py  earth.py  operators.py  panels.py  render.py
data/: retrieve_ecmwf_fc.py
